...
                                          logFirebaseEvent(
                                              'menu_click_details');

                                          context.pushNamed(
                                              DetailsWidget.routeName);
                                        },
                                        text: 'Detailed View',
                                        options: FFButtonOptions(
                                          width: 230.0,
                                          height: 52.0,
                                          padding:
                                              EdgeInsetsDirectional.fromSTEB(
                                                  0.0, 0.0, 0.0, 0.0),
...
                                        onPressed: () async {
                                          logFirebaseEvent('menu_click_trend');

                                          context.pushNamed(
                                              TrendAnalysisWidget.routeName);
                                        },
                                        text: 'Trend Analysis',
                                        options: FFButtonOptions(
                                          width: 230.0,
                                          height: 52.0,
                                          padding:
                                              EdgeInsetsDirectional.fromSTEB(
                                                  0.0, 0.0, 0.0, 0.0),
...
                                      onPressed: () async {
                                        logFirebaseEvent('menu_click_guidance');

                                        context.pushNamed(
                                            GuidanceAIWidget.routeName);
                                      },
                                      text: 'Guidance',
                                      options: FFButtonOptions(
                                        width: 230.0,
                                        height: 52.0,
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 0.0, 0.0, 0.0),
                                        iconPadding:
...
                            Align(
                              alignment: AlignmentDirectional(0.0, 0.0),
                              child: FFButtonWidget(
                                onPressed: () async {
                                  context.pushNamed(SummaryWidget.routeName);
                                },
                                text: 'Summary',
                                options: FFButtonOptions(
                                  height: 34.0,
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      32.0, 0.0, 32.0, 0.0),
                                  iconPadding: EdgeInsetsDirectional.fromSTEB(
                                      0.0, 0.0, 0.0, 0.0),
...
                ),
              ),
            ],
          ),
        ),
        body: Column(
          key: ValueKey('Column_3fpv'),
          mainAxisSize: MainAxisSize.max,
          mainAxisAlignment: MainAxisAlignment.center,
          crossAxisAlignment: CrossAxisAlignment.center,
          children: [
            Align(
              alignment: AlignmentDirectional(0.0, 0.0),
...
                padding: EdgeInsetsDirectional.fromSTEB(24.0, 0.0, 0.0, 0.0),
                child: Row(
                  mainAxisSize: MainAxisSize.max,
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    FlutterFlowIconButton(
                      key: ValueKey('IconButton_5yet'),
                      borderRadius: 8.0,
                      buttonSize: 40.0,
                      fillColor: FlutterFlowTheme.of(context).primary,
                      icon: Icon(
                        Icons.menu_open_rounded,
                        color: FlutterFlowTheme.of(context).info,
...
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  0.0, 16.0, 0.0, 16.0),
                              child: Container(
                                width: 290.1,
                                height: 239.0,
                                child: FlutterFlowLineChart(
                                  key: ValueKey('Chart_w2xu'),
                                  data: [
                                    FFLineChartData(
                                      xData: FFAppState().chartLabels,
                                      yData: FFAppState().chartAmounts,
                                      settings: LineChartBarData(
                                        color: FlutterFlowTheme.of(context)
...
