...
                                                              child: Container(
                                                                width: double
                                                                    .infinity,
                                                                child:
                                                                    TextFormField(
                                                                  key: ValueKey(
                                                                      'emailAddress_Create_eqmw'),
                                                                  controller: _model
                                                                      .emailAddressCreateTextController,
                                                                  focusNode: _model
                                                                      .emailAddressCreateFocusNode,
                                                                  autofocus:
                                                                      false,
...
                                                              child: Container(
                                                                width: double
                                                                    .infinity,
                                                                child:
                                                                    TextFormField(
                                                                  key: ValueKey(
                                                                      'password_Create_ajqt'),
                                                                  controller: _model
                                                                      .passwordCreateTextController,
                                                                  focusNode: _model
                                                                      .passwordCreateFocusNode,
                                                                  autofocus:
                                                                      false,
...
                                                              child: Container(
                                                                width: double
                                                                    .infinity,
                                                                child:
                                                                    TextFormField(
                                                                  key: ValueKey(
                                                                      'password_Conf_kubt'),
                                                                  controller: _model
                                                                      .passwordConfTextController,
                                                                  focusNode: _model
                                                                      .passwordConfFocusNode,
                                                                  autofocus:
                                                                      false,
...
                                                                      0.0,
                                                                      0.0,
                                                                      0.0,
                                                                      16.0),
                                                          child: FFButtonWidget(
                                                            key: ValueKey(
                                                                'Button_jc03'),
                                                            onPressed:
                                                                () async {
                                                              if (_model.formKey
                                                                      .currentState !=
                                                                  null) {
                                                                _model.formKey
...
